# kaori

./: .gitignore  Cargo.toml  LICENSE  README.md  a.js  benchmark.js  benchmark.lua  benchmark.py  build.py  build_and_profile.py  code.asm  hesham-cant-fly  luac.out  main.kr  run_test_suite.py  rust-toolchain.toml  rustc-ice-2026-05-10T01_47_07-13700.txt  rustc-ice-2026-05-10T01_50_09-13684.txt  t.py  test.js
benches/: interpreter_bench.rs  vm.rs  vm_bench.rs
examples/javascript/: mandelbrot.js
examples/kaori/: iterative_fib.kr  mandelbrot.kr  objects.kr  recursive_fib.kr
examples/lua/: iterative_fib.lua  objects.lua  recursive_fib.lua
examples/python/: iterative_fib.py  mandelbrot.py  objects.py  recursive_fib.py
pgo-data/: default_4252903258362615496_0.profraw
src/: compiler.rs  lexer.rs  lib.rs  main.rs  parser.rs  program.rs  program_error.rs  source.yf  token.rs  yf_error.rs
src/ast/: assign_op.rs  ast.rs  ast_node.rs  binary_op.rs  binary_operator.rs  decl.rs  emit_bytecode.rs  expr.rs  expression.rs  expression_ast.rs  literal.rs  mod.rs  node_id.rs  ops.rs  parse_declaration.rs  parse_expression.rs  parse_statement.rs  parser.rs  stmt.rs  (+6 more)
test_suite/: fib_recur.kaori  fib_recur.kr  iterative_fib.kr  mutual_recursion.kr  objects.kr  primitives.kaori  primitives.kr  recursive_fib.kr  sum.kr  test.kr  unsafe_iterative_fib.kr  unsafe_recursive_fib.kr
tests/: miri_test.rs
tests_bench/: iterative_fib.lua  iterative_fib.py  lua_bytecode.lua  nbody.lua  objects.lua  objects.py  recursive_fib.lua  recursive_fib.py  sum.lua  test.js  test.lua  test.py
(+319 files in other folders)
