[package]
name = "kaori"
version = "0.1.0"
edition = "2024"

[dependencies]
ariadne = "0.5.1"
ordered-float = "5.1.0"
mem = "0.5.0"
uuid = { version = "1.22.0", features = ["v4"] }
ahash = "0.8.12"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = 0
incremental = false