[package]
name = "kaori"
version = "0.1.0"
edition = "2024"

[dependencies]
ariadne = "0.5.1"
ordered-float = "5.1.0"
logos = "0.16.1"
foldhash = "0.2.0"
clap = "4.6.1"

[dev-dependencies]
criterion = "0.8.2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = 0
incremental = false
overflow-checks = false


[[bench]]
name = "vm"
harness = false
